syntax = "proto3";

package cache_service;

import "google/protobuf/duration.proto";

option go_package = "../pkg/proto/cache_service";

message CreateCacheRequest {
    string key = 1;
    bytes value = 2;
    google.protobuf.Duration ttl = 3;
}

message UpdateCacheRequest {
    string key = 1;
    bytes value = 2;
    google.protobuf.Duration ttl = 3;
}

message CacheResponse {
    bytes value = 1;
}

message KeyCacheRequest {
    string key = 1;
}

message Empty {}

service CacheService {
    rpc Create(CreateCacheRequest) returns (Empty) {}
    rpc Get(KeyCacheRequest) returns (CacheResponse) {}
    rpc Delete(KeyCacheRequest) returns (Empty) {}
    rpc Update(UpdateCacheRequest) returns (Empty) {}
}